プレースホルダの前景色が IE だけ正しく表示されていないスタイルの問題を修正

--- a/styles/cypress-retrieval.less
+++ b/styles/cypress-retrieval.less
@@ -632,9 +632,16 @@
 				.cypressGradient( 100% 100%, fade( @standardUIColor, 80% ), transparent 40% );
 			}
 
+			&::-ms-input-placeholder {
+				color: @standardUIColor;
+			}
+			&::-moz-placeholder {
+				color: @standardUIColor;
+			}
 			&::-webkit-input-placeholder {
 				color: @standardUIColor;
 			}
+
 		}
 
 		#query-level {
