--- a/styles/normalize.less
+++ b/styles/normalize.less
@@ -1,3 +1,4 @@
+// out: null
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 
 /**
@@ -30,52 +31,51 @@ body {
  * Correct `block` display not defined for `main` in IE 11.
  */
 
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-main,
-menu,
-nav,
-section,
-summary {
-  display: block;
-}
+//article,
+//aside,
+//details,
+//figcaption,
+//figure,
+//footer,
+//header,
+//hgroup,
+//main,
+//menu,
+//nav,
+//section,
+//summary {
+//  display: block;
+//}
 
 /**
  * 1. Correct `inline-block` display not defined in IE 8/9.
  * 2. Normalize vertical alignment of `progress` in Chrome, Firefox, and Opera.
  */
 
-audio,
-canvas,
-progress,
-video {
-  display: inline-block; /* 1 */
-  vertical-align: baseline; /* 2 */
-}
+//audio,
+//canvas,
+//progress,
+//video {
+//  display: inline-block; /* 1 */
+//  vertical-align: baseline; /* 2 */
+//}
 
 /**
  * Prevent modern browsers from displaying `audio` without controls.
  * Remove excess height in iOS 5 devices.
  */
 
-audio:not([controls]) {
-  display: none;
-  height: 0;
-}
+//audio:not([controls]) {
+//  display: none;
+//  height: 0;
+//}
 
 /**
  * Address `[hidden]` styling not present in IE 8/9/10.
  * Hide the `template` element in IE 8/9/11, Safari, and Firefox < 22.
  */
 
-[hidden],
-template {
+[hidden] {
   display: none;
 }
 
@@ -106,26 +106,26 @@ a:hover {
  * Address styling not present in IE 8/9/10/11, Safari, and Chrome.
  */
 
-abbr[title] {
-  border-bottom: 1px dotted;
-}
+//abbr[title] {
+//  border-bottom: 1px dotted;
+//}
 
 /**
  * Address style set to `bolder` in Firefox 4+, Safari, and Chrome.
  */
 
-b,
-strong {
-  font-weight: bold;
-}
+//b,
+//strong {
+//  font-weight: bold;
+//}
 
 /**
  * Address styling not present in Safari and Chrome.
  */
 
-dfn {
-  font-style: italic;
-}
+//dfn {
+//  font-style: italic;
+//}
 
 /**
  * Address variable `h1` font-size and margin within `section` and `article`
@@ -141,38 +141,38 @@ h1 {
  * Address styling not present in IE 8/9.
  */
 
-mark {
-  background: #ff0;
-  color: #000;
-}
+//mark {
+//  background: #ff0;
+//  color: #000;
+//}
 
 /**
  * Address inconsistent and variable font size in all browsers.
  */
 
-small {
-  font-size: 80%;
-}
+//small {
+//  font-size: 80%;
+//}
 
 /**
  * Prevent `sub` and `sup` affecting `line-height` in all browsers.
  */
 
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-sup {
-  top: -0.5em;
-}
-
-sub {
-  bottom: -0.25em;
-}
+//sub,
+//sup {
+//  font-size: 75%;
+//  line-height: 0;
+//  position: relative;
+//  vertical-align: baseline;
+//}
+//
+//sup {
+//  top: -0.5em;
+//}
+//
+//sub {
+//  bottom: -0.25em;
+//}
 
 /* Embedded content
    ========================================================================== */
@@ -189,9 +189,9 @@ img {
  * Correct overflow not hidden in IE 9/10/11.
  */
 
-svg:not(:root) {
-  overflow: hidden;
-}
+//svg:not(:root) {
+//  overflow: hidden;
+//}
 
 /* Grouping content
    ========================================================================== */
@@ -200,39 +200,39 @@ svg:not(:root) {
  * Address margin not present in IE 8/9 and Safari.
  */
 
-figure {
-  margin: 1em 40px;
-}
+//figure {
+//  margin: 1em 40px;
+//}
 
 /**
  * Address differences between Firefox and other browsers.
  */
 
-hr {
-  -moz-box-sizing: content-box;
-  box-sizing: content-box;
-  height: 0;
-}
+//hr {
+//  -moz-box-sizing: content-box;
+//  box-sizing: content-box;
+//  height: 0;
+//}
 
 /**
  * Contain overflow in all browsers.
  */
 
-pre {
-  overflow: auto;
-}
+//pre {
+//  overflow: auto;
+//}
 
 /**
  * Address odd `em`-unit font size rendering in all browsers.
  */
 
-code,
-kbd,
-pre,
-samp {
-  font-family: monospace, monospace;
-  font-size: 1em;
-}
+//code,
+//kbd,
+//pre,
+//samp {
+//  font-family: monospace, monospace;
+//  font-size: 1em;
+//}
 
 /* Forms
    ========================================================================== */
@@ -249,11 +249,11 @@ samp {
  * 3. Address margins set differently in Firefox 4+, Safari, and Chrome.
  */
 
+//optgroup,
+//select,
+//textarea,
 button,
-input,
-optgroup,
-select,
-textarea {
+input {
   color: inherit; /* 1 */
   font: inherit; /* 2 */
   margin: 0; /* 3 */
@@ -277,22 +277,6 @@ button {
 button,
 select {
   text-transform: none;
-}
-
-/**
- * 1. Avoid the WebKit bug in Android 4.0.* where (2) destroys native `audio`
- *    and `video` controls.
- * 2. Correct inability to style clickable `input` types in iOS.
- * 3. Improve usability and consistency of cursor style between image-type
- *    `input` and others.
- */
-
-button,
-html input[type="button"], /* 1 */
-input[type="reset"],
-input[type="submit"] {
-  -webkit-appearance: button; /* 2 */
-  cursor: pointer; /* 3 */
 }
 
 /**
@@ -343,10 +327,10 @@ input[type="radio"] {
  * decrement button to change from `default` to `text`.
  */
 
-input[type="number"]::-webkit-inner-spin-button,
-input[type="number"]::-webkit-outer-spin-button {
-  height: auto;
-}
+//input[type="number"]::-webkit-inner-spin-button,
+//input[type="number"]::-webkit-outer-spin-button {
+//  height: auto;
+//}
 
 /**
  * 1. Address `appearance` set to `searchfield` in Safari and Chrome.
@@ -354,12 +338,12 @@ input[type="number"]::-webkit-outer-spin-button {
  *    (include `-moz` to future-proof).
  */
 
-input[type="search"] {
-  -webkit-appearance: textfield; /* 1 */
-  -moz-box-sizing: content-box;
-  -webkit-box-sizing: content-box; /* 2 */
-  box-sizing: content-box;
-}
+//input[type="search"] {
+//  -webkit-appearance: textfield; /* 1 */
+//  -moz-box-sizing: content-box;
+//  -webkit-box-sizing: content-box; /* 2 */
+//  box-sizing: content-box;
+//}
 
 /**
  * Remove inner padding and search cancel button in Safari and Chrome on OS X.
@@ -367,47 +351,47 @@ input[type="search"] {
  * padding (and `textfield` appearance).
  */
 
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
+//input[type="search"]::-webkit-search-cancel-button,
+//input[type="search"]::-webkit-search-decoration {
+//  -webkit-appearance: none;
+//}
 
 /**
  * Define consistent border, margin, and padding.
  */
 
-fieldset {
-  border: 1px solid #c0c0c0;
-  margin: 0 2px;
-  padding: 0.35em 0.625em 0.75em;
-}
+//fieldset {
+//  border: 1px solid #c0c0c0;
+//  margin: 0 2px;
+//  padding: 0.35em 0.625em 0.75em;
+//}
 
 /**
  * 1. Correct `color` not being inherited in IE 8/9/10/11.
  * 2. Remove padding so people aren't caught out if they zero out fieldsets.
  */
 
-legend {
-  border: 0; /* 1 */
-  padding: 0; /* 2 */
-}
+//legend {
+//  border: 0; /* 1 */
+//  padding: 0; /* 2 */
+//}
 
 /**
  * Remove default vertical scrollbar in IE 8/9/10/11.
  */
 
-textarea {
-  overflow: auto;
-}
+//textarea {
+//  overflow: auto;
+//}
 
 /**
  * Don't inherit the `font-weight` (applied by a rule above).
  * NOTE: the default cannot safely be changed in Chrome and Safari on OS X.
  */
 
-optgroup {
-  font-weight: bold;
-}
+//optgroup {
+//  font-weight: bold;
+//}
 
 /* Tables
    ========================================================================== */
