--- a/styles/cypress-retrieval.less
+++ b/styles/cypress-retrieval.less
@@ -36,86 +36,33 @@
 /* ==== ==== ==== ==== ==== ==== ==== ==== ==== ====
  * header
  * ==== ==== ==== ==== ==== ==== ==== ==== ==== ==== */
+#logo {
+	margin-left: 15px;
+}
+
 #tool-commentary {
-	float: right;
 	display: block;
+	float: right;
 	line-height: @headerHeight;
 	margin-right: 20px;
 }
 
-#search-request-title {
-	float: right;
-	display: block;
+#sorting-pane-button   { .pane-button( left );  }
+#retrieval-pane-button { .pane-button( right ); }
+
+.pane-button( @float ) {
+	cursor: pointer;
+	float: @float;
 	font-size: 14px;
-	line-height: @headerHeight;
-}
-
-#search-box {
-	.parentBox();
-	float: right;
-}
-
-	#toolbox-button-box {
-		position: relative;
-		float: right;
-		margin: 5px;
-		height: 40px;
-		width: 40px;
-		cursor: pointer;
-		overflow: hidden;
-
-		.close {
-			background: transparent;
-
-			&:before {
-				.toolbox-button-box( -45deg );
-			}
-
-			&:after {
-				.toolbox-button-box( -135deg );
-			}
-		}
-
-		.toolbox-button-box( @deg ) {
-			margin-top: 0;
-			transform: rotate( @deg );
-			-webkit-transform: rotate( @deg );
-		}
+	height: 40px;
+	line-height: 40px;
+	margin: 5px 10px;
+	vertical-align: middle;
+	img {
+		margin-left: 5px;
+		vertical-align: middle;
 	}
-
-		#toolbox-button {
-			display: block;
-			position: absolute;
-			top: 50%;
-			left: 50%;
-			width: 24px;
-			height: 4px;
-			border-radius: 1px;
-			margin: -2px 0 0 -11px;
-			background: #ffffff;
-			transition: 0.2s;
-
-			&:before {
-				.toolbox-button( -10px );
-			}
-
-			&:after {
-				.toolbox-button( 6px );
-			}
-		}
-
-		.toolbox-button( @marginTop ) {
-			display: block;
-			content: "";
-			position: absolute;
-			top: 50%;
-			left: 0;
-			width: 24px;
-			height: 4px;
-			background: #ffffff;
-			transition: 0.3s;
-			margin-top: @marginTop;
-		}
+}
 
 /* ==== ==== ==== ==== ==== ==== ==== ==== ==== ====
  * equipments
@@ -543,26 +490,19 @@
 		}
 	} // .equipment-card
 } // #equipments
-
 	#landing-title {
 		position: relative;
 		z-index: 1;
 	}
-
 	#landing {
-		.newline {
-			margin-top: 10px;
-		}
-
-		img {
-			vertical-align: middle;
-		}
+		.newline { margin-top: 10px; }
+		img { vertical-align: middle; }
 	}
 
 /* ==== ==== ==== ==== ==== ==== ==== ==== ==== ====
- * search-pane
+ * sorting-pane, retrieval-pane common styles
  * ==== ==== ==== ==== ==== ==== ==== ==== ==== ==== */
-#search-pane {
+.pane() {
 	padding: @headerHeight + 5px 5px 5px 5px;
 	font-size: 12px;
 	box-shadow: -1px 0 4px fade( @themeColor, 90% );
@@ -570,7 +510,20 @@
 	.userSelect( none );
 }
 
-	#search-queries {
+/* ==== ==== ==== ==== ==== ==== ==== ==== ==== ====
+ * sorting-pane
+ * ==== ==== ==== ==== ==== ==== ==== ==== ==== ==== */
+#sorting-pane {
+	.pane();
+}
+
+/* ==== ==== ==== ==== ==== ==== ==== ==== ==== ====
+ * retrieval-pane
+ * ==== ==== ==== ==== ==== ==== ==== ==== ==== ==== */
+#retrieval-pane {
+	.pane();
+}
+	#retrieval-queries {
 		.query-label {
 			display: block;
 			margin: 5px 0 2px;
@@ -591,11 +544,9 @@
 			display: none;
 		}
 	}
-
-		#search-button-box-sub {
+		#retrieval-button-box-sub {
 			.parentBox();
 		}
-
 			#records {
 				width: 130px;
 				text-align: right;
@@ -612,15 +563,13 @@
 					color: @positiveColor;
 				}
 			}
-
-			#search-button-sub {
+			#retrieval-button-sub {
 				float: right;
 				text-align: right;
 				margin-right: 20px;
 				margin-bottom: 0;
 			}
-
-		#search-button-box-main {
+		#retrieval-button-box-main {
 			margin-top: 50px;
 			margin-right: 20px;
 			text-align: right;
@@ -628,13 +577,11 @@
 				margin-left: 20px;
 			}
 		}
-
 		#usage-button-box {
 			margin-top: 25px;
 			margin-right: 20px;
 			text-align: right;
 		}
-
 		#equipment-name {
 			display: block;
 			border: solid 1px @standardUIColor;
@@ -661,13 +608,11 @@
 			}
 
 		}
-
 		#query-level {
 			.query-label {
 				margin-top: 0;
 			}
 		}
-
 		#query-rarities {
 			.parentBox();
 
@@ -677,13 +622,11 @@
 
 			.icheck( 60px );
 		}
-
 		#query-classes {
 			.parentBox();
 
 			.icheck( 28px );
 		}
-
 		#dialog-types, #dialog-flags {
 			.userSelect( none );
 
@@ -715,11 +658,9 @@
 				}
 			}
 		}
-
 		#dialog-types {
 			.icheck( 50px );
 		}
-
 		#dialog-flags {
 			.icheck( 50px );
 		}
