UIの暫定実装

--- a/styles/slidebars.less
+++ b/styles/slidebars.less
@@ -1,3 +1,4 @@
+// out: null
 /* -----------------------------------
  * Slidebars
  * Version 0.10.2
@@ -107,11 +108,11 @@ html.sb-static .sb-slidebar,
 	.sb-slidebar {
 		width: 30%;
 	}
-	
+
 	.sb-width-thin {
 		width: 15%;
 	}
-	
+
 	.sb-width-wide {
 		width: 45%;
 	}
@@ -120,11 +121,11 @@ html.sb-static .sb-slidebar,
 	.sb-slidebar {
 		width: 70%;
 	}
-	
+
 	.sb-width-thin {
 		width: 55%;
 	}
-	
+
 	.sb-width-wide {
 		width: 85%;
 	}
@@ -134,11 +135,11 @@ html.sb-static .sb-slidebar,
 	.sb-slidebar {
 		width: 55%;
 	}
-	
+
 	.sb-width-thin {
 		width: 40%;
 	}
-	
+
 	.sb-width-wide {
 		width: 70%;
 	}
@@ -148,11 +149,11 @@ html.sb-static .sb-slidebar,
 	.sb-slidebar {
 		width: 40%;
 	}
-	
+
 	.sb-width-thin {
 		width: 25%;
 	}
-	
+
 	.sb-width-wide {
 		width: 55%;
 	}
@@ -162,11 +163,11 @@ html.sb-static .sb-slidebar,
 	.sb-slidebar {
 		width: 30%;
 	}
-	
+
 	.sb-width-thin {
 		width: 15%;
 	}
-	
+
 	.sb-width-wide {
 		width: 45%;
 	}
@@ -176,11 +177,11 @@ html.sb-static .sb-slidebar,
 	.sb-slidebar {
 		width: 20%;
 	}
-	
+
 	.sb-width-thin {
 		width: 5%;
 	}
-	
+
 	.sb-width-wide {
 		width: 35%;
 	}
@@ -202,7 +203,7 @@ html.sb-static .sb-slidebar,
 /* --------------------
  * 005 - Helper Classes
  */
- 
-.sb-hide { 
+
+.sb-hide {
 	display: none; /* Optionally applied to control classes when Slidebars is disabled over a certain width. */
 }
