--- a/styles/cypress-retrieval.less
+++ b/styles/cypress-retrieval.less
@@ -515,10 +515,33 @@
  * ==== ==== ==== ==== ==== ==== ==== ==== ==== ==== */
 #sorting-pane {
 	.pane();
+	.icheck( 70px );
 }
+.sort-checkbox-top-category {
+	display: block;
+	overflow: hidden;
+	margin: 10px 15px 0;
+	.icheckbox {
+		top: 1px;
+	}
+}
+	.sorting-option {
+		display: none;
+		margin-bottom: 15px;
+		ul ul {
+			padding-left: 20px;
+			& li {
+				display: inline;
+				&:before {
+					content: "・ ";
+				}
+			}
+		}
+	}
+
 
 /* ==== ==== ==== ==== ==== ==== ==== ==== ==== ====
- * retrieval-pane
+ * retrieval-pane6
  * ==== ==== ==== ==== ==== ==== ==== ==== ==== ==== */
 #retrieval-pane {
 	.pane();
