ソートの基本実装

--- a/styles/cypress-core.less
+++ b/styles/cypress-core.less
@@ -23,7 +23,7 @@
 
 @font-face {
 	font-family: Lato;
-	src: url( "../styles/Lato-Regular.ttf" ) format( "truetype" );
+	src: url( "Lato-Regular.ttf" ) format( "truetype" );
 }
 
 #cypress {
