--- a/styles/cypress-retrieval.less
+++ b/styles/cypress-retrieval.less
@@ -33,6 +33,18 @@
 
 @tool-button-side: 25px;
 
+@font-face {
+	font-family: "icons";
+	src: url( "icons.woff" ) format( "woff" ),
+		 url( "icons.svg" )  format( "svg" );
+	font-weight: normal;
+	font-style: normal;
+}
+
+.icon {
+	font-family: icons;
+}
+
 /* ==== ==== ==== ==== ==== ==== ==== ==== ==== ====
  * header
  * ==== ==== ==== ==== ==== ==== ==== ==== ==== ==== */
@@ -47,19 +59,22 @@
 	margin-right: 20px;
 }
 
-#sorting-pane-button   { .pane-button( left );  }
-#retrieval-pane-button { .pane-button( right ); }
+#sorting-pane-button   { .pane-button( left, 24px );  }
+#retrieval-pane-button { .pane-button( right, 20px ); }
 
-.pane-button( @float ) {
+.pane-button( @float, @iconSize ) {
 	cursor: pointer;
 	float: @float;
-	font-size: 14px;
 	height: 40px;
 	line-height: 40px;
 	margin: 5px 10px;
-	vertical-align: middle;
-	img {
-		margin-left: 5px;
+	.button-icon {
+		.icons;
+		font-size: @iconSize;
+		vertical-align: middle;
+	}
+	.button-text {
+		font-size: 14px;
 		vertical-align: middle;
 	}
 }
@@ -515,19 +530,26 @@
  * ==== ==== ==== ==== ==== ==== ==== ==== ==== ==== */
 #sorting-pane {
 	.pane();
-	.icheck( 70px );
 }
 .sort-checkbox-top-category {
 	display: block;
 	overflow: hidden;
 	margin: 10px 15px 0;
+	.icheck( 70px );
 	.icheckbox {
 		top: 1px;
 	}
 }
 	.sorting-option {
 		display: none;
-		margin-bottom: 15px;
+		overflow: hidden;
+		margin: 5px 0 15px 30px;
+
+		.icheck( 100px );
+		.icheckbox {
+			.setCheckboxColor( fade( #aa846f, 80% ) );
+		}
+
 		ul ul {
 			padding-left: 20px;
 			& li {
@@ -644,6 +666,14 @@
 			}
 
 			.icheck( 60px );
+			.icheckbox {
+				&.poor     { .setCheckboxColor( @poorColor );     }
+				&.normal   { .setCheckboxColor( @normalColor );   }
+				&.good     { .setCheckboxColor( @goodColor );     }
+				&.master   { .setCheckboxColor( @masterColor );   }
+				&.legend   { .setCheckboxColor( @legendColor );   }
+				&.artifact { .setCheckboxColor( @artifactColor ); }
+			}
 		}
 		#query-classes {
 			.parentBox();
@@ -730,21 +760,14 @@
 		}
 
 		.setCheckboxColor( @standardUIColor );
+	}
+}
 
-		&.poor     { .setCheckboxColor( @poorColor );     }
-		&.normal   { .setCheckboxColor( @normalColor );   }
-		&.good     { .setCheckboxColor( @goodColor );     }
-		&.master   { .setCheckboxColor( @masterColor );   }
-		&.legend   { .setCheckboxColor( @legendColor );   }
-		&.artifact { .setCheckboxColor( @artifactColor ); }
+.setCheckboxColor( @color ) {
+	border: 1px solid @color;
 
-		.setCheckboxColor( @color ) {
-			border: 1px solid @color;
-
-			&.hover, &.checked.hover {
-				.cypressGradient( 0% 0%, fade( @color, 80% ), transparent 40% );
-			}
-		}
+	&.hover, &.checked.hover {
+		.cypressGradient( 0% 0%, fade( @color, 80% ), transparent 40% );
 	}
 }
 
