辞書式ソートの実装

--- a/styles/cypress-retrieval.less
+++ b/styles/cypress-retrieval.less
@@ -69,7 +69,7 @@
 	line-height: 40px;
 	margin: 5px 10px;
 	.button-icon {
-		.icons;
+		.icon;
 		font-size: @iconSize;
 		vertical-align: middle;
 	}
@@ -545,7 +545,7 @@
 		overflow: hidden;
 		margin: 5px 0 15px 30px;
 
-		.icheck( 100px );
+		.icheck( 90px );
 		.icheckbox {
 			.setCheckboxColor( fade( #aa846f, 80% ) );
 		}
