--- a/styles/cypress-retrieval.less
+++ b/styles/cypress-retrieval.less
@@ -164,10 +164,8 @@
 			border: none;
 			outline: none;
 			border-radius: 5px;
-
-			img {
-				padding-top: 4px;
-			}
+			font-family: icons;
+			font-size: 16px;
 
 			&.data-copy-hover {
 				.cypressGradient( 0% 0%, @standardUIColor, transparent 100% );
