--- a/styles/cypress-retrieval.less
+++ b/styles/cypress-retrieval.less
@@ -6,23 +6,23 @@
 /* ==== ==== ==== ==== ==== ==== ==== ==== ==== ====
  * definition division
  * ==== ==== ==== ==== ==== ==== ==== ==== ==== ==== */
-@StrawberryPink: #F87B90; // PANTONE 16-1731 TPX Strawberry Pink
+@StrawberryPink: #f87b90; // PANTONE 16-1731 TPX Strawberry Pink
 @usageColor: @StrawberryPink;
 
 @positiveColor: #6bd38c; // PANTONE 14-6340 TPX Spring Bouquet
 @negativeColor: #e8768f; // PANTONE 16-1723 TPX Confetti
 @nonActive: #66676c; // PANTONE Cool Gray 10 CP
 @cardBackgroundA: fade( #000000, 30% );
-@cardBackgroundB: fade( #272D33, 90% );
+@cardBackgroundB: fade( #272d33, 90% );
 
-@PANTONE513CP:       #8E3B90;
+@PANTONE513CP:       #8e3b90;
 @PANTONECoolGray7CP: #99999B;
 @PANTONE620CP:       #948521;
-@PANTONE2925CP:      #1596D1;
-@PANTONE7456CP:      #6D79B6;
-@PANTONE348CP:       #008F4C;
-@PANTONE7418CP:      #C55058;
-@PANTONE7618CP:      #CB734F;
+@PANTONE2925CP:      #1596d1;
+@PANTONE7456CP:      #6d79b6;
+@PANTONE348CP:       #008f4c;
+@PANTONE7418CP:      #c55058;
+@PANTONE7618CP:      #cb734f;
 
 @poorColor:     @PANTONE513CP;
 @normalColor:   @PANTONECoolGray7CP;
