--- a/styles/cypress-retrieval.less
+++ b/styles/cypress-retrieval.less
@@ -768,6 +768,15 @@
 					margin-left: 20px;
 				}
 			}
+
+			.blank-button-space {
+				border: 1px solid transparent;
+				display: block;
+				float: left;
+				height: 20px;
+				margin-right: 10px;
+				width: 95px;
+			}
 		}
 		#dialog-types {
 			.icheck( 50px );
